# cloudflare-email-manage

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
alembic/: README  env.py
alembic/versions/: 20260623_2203_690a516ed7db_initial_schema.py  20260625_1000_a1b2c3d4e5f6_remove_permission_fields.py  20260625_1100_b2c3d4e5f6a7_add_public_token.py  20260626_0600_c3d4e5f6a7b8_normalize_email_lowercase.py  20260626_0800_d4e5f6a7b8c9_add_destination_address.py  20260626_1000_e5f6a7b8c9d0_add_domain_webhook_secret.py  20260628_1800_f6a7b8c9d0e1_add_api_key_scopes.py  20260628_2100_a7b8c9d0e1f2_add_cf_account_capability_report.py  20260629_0200_b8c9d0e1f2a3_add_domain_inbound_routing_enabled.py  (+1 more)
app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
app/assets/: email_worker.bundle.js
app/models/: __init__.py  user.py  (+9 more)
docs/: configuration.md
e2e/: conftest.py  test_e2e_flows.py
tests/: conftest.py  test_api_keys.py  test_auth.py  test_cf_accounts.py  test_cloudflare_workers.py  test_destination_addresses.py  test_domains.py  test_email_addresses.py  test_forwarding_rules.py  test_inbound.py  test_migration_service.py  test_outbound.py  test_production_security.py  test_public_mail.py  test_rate_limit.py  test_smoke.py  test_users.py  test_web_api_keys_profile_admin.py  test_web_auth.py  test_web_cf_accounts.py  test_web_domains_email.py  test_web_forwarding_inbound_outbound.py  test_web_seo.py  test_worker_deploy.py
(+91 files in other folders)
